--- a/src/demoProjects/rentACar/Application/Application.csproj
+++ b/src/demoProjects/rentACar/Application/Application.csproj
@@ -7,11 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\" />
+    <Folder Include="Features\Brands\Commands\CreateBrand\" />
+    <Folder Include="Features\Brands\Constants\" />
+    <Folder Include="Features\Brands\Dtos\" />
+    <Folder Include="Features\Brands\Models\" />
+    <Folder Include="Features\Brands\Rules\" />
+    <Folder Include="Features\Brands\Queries\" />
     <Folder Include="Services\Repositories\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+	</ItemGroup>
+
   <ItemGroup>
+    <ProjectReference Include="..\..\..\corePackages\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
