--- a/src/demoProjects/rentACar/Application/Application.csproj
+++ b/src/demoProjects/rentACar/Application/Application.csproj
@@ -11,13 +11,15 @@
     <Folder Include="Features\Brands\Constants\" />
     <Folder Include="Features\Brands\Dtos\" />
     <Folder Include="Features\Brands\Models\" />
+    <Folder Include="Features\Brands\Queries\GetListBrand\" />
+    <Folder Include="Features\Brands\Queries\GetByIdBrand\" />
     <Folder Include="Features\Brands\Rules\" />
-    <Folder Include="Features\Brands\Queries\" />
     <Folder Include="Services\Repositories\" />
   </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.1" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
 	</ItemGroup>
 
