--- a/src/demoProjects/rentACar/Application/Application.csproj
+++ b/src/demoProjects/rentACar/Application/Application.csproj
@@ -18,8 +18,9 @@
     <Folder Include="Features\Models\Constants\" />
     <Folder Include="Features\Models\Dtos\" />
     <Folder Include="Features\Models\Models\" />
+    <Folder Include="Features\Models\Queries\GetListModel\" />
+    <Folder Include="Features\Models\Queries\GetListModelByDynamic\" />
     <Folder Include="Features\Models\Rules\" />
-    <Folder Include="Features\Models\Queries\" />
     <Folder Include="Features\Models\Profiles\" />
     <Folder Include="Services\Repositories\" />
   </ItemGroup>
